dark mode fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base{
+    body {
+        @apply dark:bg-stone-500 bg-stone-200 dark:text-black text-stone-200 
+    }
+}
